--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: "3.3"
 
 services:
   db:
@@ -18,8 +18,16 @@ services:
       - "4200:4200"
     environment:
       - PREFECT_ORION_API_HOST=127.0.0.1
-    image: ehddnr/investment-data-pipeline:2.0.0
+      - GOOGLE_APPLICATION_CREDENTIALS=/run/secrets/gcp-credentials
+    image: ehddnr/investment-data-pipeline:3.0.0
     container_name: data-pipeline-job
+    secrets:
+      - gcp-credentials
+
+secrets:
+  gcp-credentials:
+    file: ./bright-eon-368611-4dc130fe8191.json
+
 volumes:
   db_home:
     external: false
